<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Contacts</string>

    <string name="toolbar_menu_parameters">Paramètres</string>
    <string name="toolbar_menu_help">Aide</string>
    <string name="toolbar_menu_validate_label">Validate</string>
    <string name="toolbar_menu_add_label">Add a new item</string>

    <string name="common_phone_label">Téléphone</string>
    <string name="common_firstname_label">Prénom</string>
    <string name="common_lastname_label">Nom</string>
    <string name="common_email_label">E-mail</string>

    <string name="add_contact_save_label">Sauvegarder</string>

    <string name="contact_details_add_contact_label">Ajouter un contact</string>

    <string name="hello_label">Hello fragment !</string>

    <string name="profile_mine">Mon profil</string>
    <string name="activity_title_add">Ajout</string>
    <string name="activity_title_contact_details">Details</string>
</resources>
