<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_weight="8">

        <ImageView
            android:src="@drawable/ic_profile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:gravity="right"
                android:text="@string/common_firstname_label" />

            <TextView
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:textStyle="bold"
                android:id="@+id/details_firstname_textview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:gravity="right"
                android:text="@string/common_lastname_label" />

            <TextView
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:textStyle="bold"
                android:id="@+id/details_lastname_textview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:src="@drawable/ic_phone"
                android:contentDescription="@string/common_phone_label" />

            <TextView
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:textStyle="bold"
                android:id="@+id/details_phone_textview" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:src="@drawable/ic_mail"
                android:contentDescription="@string/common_email_label" />

            <TextView
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="22sp"
                android:textStyle="bold"
                android:id="@+id/details_mail_textview" />
        </LinearLayout>

        <Button
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/details_add_contact_button"
            android:text="@string/contact_details_add_contact_label"
            />
    </LinearLayout>

</LinearLayout>